--- a/snake/snake/snake.csproj
+++ b/snake/snake/snake.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EF423922-40E3-4BF7-9406-F588E06C0ABA}</ProjectGuid>
+    <ProjectGuid>{21D2B377-FC4A-4A6E-BC05-DDC6CED11397}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>snake</RootNamespace>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
     <AssemblyName>snake</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
