--- a/snake/snake/snake.csproj
+++ b/snake/snake/snake.csproj
@@ -46,6 +46,7 @@
     <Compile Include="..\..\Program.cs">
       <Link>Program.cs</Link>
     </Compile>
+    <Compile Include="point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
